feat: 新增玩家地标并兼容 1.16.5
- 新增 pwarp 玩家地标功能及聊天输入捕获器
- 重构传送为同步调用并统一跨服吟唱流程
- 升级构建以支持 Java 16 和 Spigot 1.16.5
- 更新配置与权限文档